fixed quarter not showing the right quarter date on year change on month

--- a/src/components/DatePicker/DatePicker.module.css
+++ b/src/components/DatePicker/DatePicker.module.css
@@ -35,6 +35,7 @@ justify-content: center;
 
   .formSelect::before {
     border-bottom: none;
+    border-width: 1px;
   } 
 
   .month{
